--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input {
+    @apply shadow-md outline-none focus:ring-2 focus:ring-blue-500 rounded-md;
+}
